# agentic-engineering-ven

./: .gitignore  README.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/smell_detector/: crew.py  main.py  test.py
src/smell_detector/config/: agents.yaml  tasks.yaml
src/smell_detector/tools/: custom_tool.py
