[project]
name = "smell_detector"
version = "0.1.0"
description = "smell-detector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
smell_detector = "smell_detector.main:run"
run_crew = "smell_detector.main:run"
train = "smell_detector.main:train"
replay = "smell_detector.main:replay"
test = "smell_detector.main:test"
run_with_trigger = "smell_detector.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
